# AndrejProj

./: pyproject.toml
backend/: __init__.py  __main__.py  conftest.py  utils.py
backend/api/: auth_utils.py  scrap.py
backend/api/auth/: handlers.py  schemas.py  tests.py
backend/api/scrap/: handlers.py
backend/config/: develop.py  tests.py
backend/models/: __init__.py
frontend/app/: package-lock.json
frontend/app/src/: main.ts
frontend/app/src/app/: app.component.css  app.component.ts  app.routes.ts
frontend/app/src/app/login/: login.component.css  login.component.ts
frontend/app/src/app/parser/: parser.component.css  parser.component.ts
frontend/myapp/src/app/: app.module.ts
frontend/testapp/: README.md  package-lock.json  package.json
frontend/testapp/src/app/home/: home.component.css
frontend/testapp/src/app/housing-location/: housing-location.component.css
